<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title="Search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/favourite_list"
        android:title="@string/title_favourite"
        android:icon="@drawable/ic_favorite_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/back_to_list"
        android:title="@string/btn_back"
        android:icon="@drawable/ic_arrow_back_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_language"
        android:title="@string/text_language"
        app:showAsAction="never"/>
</menu>