<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    style="@style/CardViewStyle"
    card_view:cardCornerRadius="8dp">

<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin"
    >

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/img_item_photo"
        android:layout_width="125dp"
        android:layout_height="200dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:riv_border_color="#ffffff"
        app:riv_border_width="2dp"
        app:riv_corner_radius="8dp"
        android:src="@drawable/image_placeholder"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_item_name"
            style="@style/TitleMovieName"
            tools:text="@string/tvshow_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/ImageSmall"
                android:src="@drawable/ic_trending_up_black_24dp"
                />

            <TextView
                android:id="@+id/tv_item_popularity"
                style="@style/TextViewGenre"
                tools:text="@string/tvshow_popularity" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/ImageSmall"
                android:src="@drawable/ic_access_time_black_24dp"
                />

            <TextView
                android:id="@+id/tv_item_releasedate"
                style="@style/TextViewGenre"
                tools:text="@string/tvhow_releasedate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                style="@style/ImageSmall"
                android:src="@drawable/ic_star_black_24dp"
                />

            <TextView
                android:id="@+id/tv_item_rating"
                style="@style/StyleTextView"
                tools:text="@string/tvshow_rating" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/tv_see_more"
                style="@style/StyleTextView"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:textStyle="italic"
                tools:text="@string/see_more" />

            <ImageView
                style="@style/ImageSmall"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

</com.google.android.material.card.MaterialCardView>